# Assembler

./: .gitignore  CMakeLists.txt  README.md  comands_proccesing.c  comands_proccesing.h  errors.c  errors.h  first_pass.c  first_pass.h  globals.h  linked_list.c  linked_list.h  main.c  makefile  pre_assmbler.c  pre_assmbler.h  printer.c  printer.h  sec_pass.c  sec_pass.h  tester.txt.as
.github/workflows/: build.yml
